--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 </head>
 <body>
     <h1>DERRIC</h1>
+    <h1>NEW NAME</h1>
     <img width="200px" src="DI IMAGE.jpeg" alt="">
     <p>MY PROFILE TEXT</p>
 </body>
