--- a/index.html
+++ b/index.html
@@ -10,5 +10,6 @@
     <h1>NEW NAME</h1>
     <img width="200px" src="DI IMAGE.jpeg" alt="">
     <p>MY PROFILE TEXT</p>
+    <P>ncredible change happens in your life when you decide to take control of what you have power over instead of craving control over what you don't.</P>
 </body>
 </html>
