--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <h1>DERRIC</h1>
-    <h1>NEW NAME</h1>
+    <h1>DI BOSS</h1>
     <img width="200px" src="DI IMAGE.jpeg" alt="">
     <p>MY PROFILE TEXT</p>
     <P>Incredible change happens in your life when you decide to take control of what you have power over instead of craving control over what you don't.</P>
